--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/typography": "^0.5.15",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
@@ -17,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
